--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "tailwindcss": "^3.2.1"
   }
 }
